# Biomni

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTION.md  README.md  pyproject.toml  setup.py
LearnBiomni/: Agent模块技术分析.md  工具集成与调用分析.md  项目说明概要.md
biomni/: env_desc.py  llm.py  utils.py  version.py
biomni/agent/: __init__.py  a1.py  biomni_agent.py  env_collection.py  qa_agent.py  qa_llm.py  react.py
biomni/biorxiv_scripts/: extract_biorxiv_tasks.py  generate_function.py  process_all_subjects.py
biomni/model/: retriever.py
biomni/task/: base_task.py  drug_repurposing.py  gene_perturb_selection.py  gwas_causal_gene.py  gwas_variant_prioritization.py  hle.py  lab_bench.py  microbiome_analysis.py  patient_gene_detection.py  rare_disease_diagnosis.py
biomni/tool/: __init__.py  biochemistry.py  bioengineering.py  biophysics.py  cancer_biology.py  cell_biology.py  database.py  genetics.py  genomics.py  immunology.py  literature.py  microbiology.py  molecular_biology.py  pathology.py  pharmacology.py  physiology.py  support_tools.py  synthetic_biology.py  systems_biology.py  tool_registry.py
biomni/tool/schema_db/: cbioportal.pkl  clinvar.pkl  dbsnp.pkl  emdb.pkl  ensembl.pkl  geo.pkl  gnomad.pkl  gtopdb.pkl  gwas_catalog.pkl  interpro.pkl  iucn.pkl  jaspar.pkl  kegg.pkl  mpd.pkl  opentarget.pkl  opentarget_genetics.pkl  paleobiology.pkl  pdb.pkl  pride.pkl  reactome.pkl  remap.pkl  stringdb.pkl  ucsc.pkl  uniprot.pkl  worms.pkl
biomni/tool/tool_description/: biochemistry.py  bioengineering.py  biophysics.py  cancer_biology.py  cell_biology.py  database.py  genetics.py  genomics.py  immunology.py  literature.py  microbiology.py  molecular_biology.py  pathology.py  pharmacology.py  physiology.py  support_tools.py  synthetic_biology.py  systems_biology.py
biomni_env/: README.md  bio_env.yml  cli_tools_config.json  environment.yml  install_cli_tools.sh  install_r_packages.R  r_packages.yml  setup.sh  setup_path.sh
tutorials/: 101_biomni.ipynb  biomni_101.ipynb
tutorials/examples/: cloning.ipynb
