[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biomni"
dynamic = ["version"]
description = "Biomni"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Biomni Team", email = "kexinh@cs.stanford.edu"}
]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/snap-stanford/biomni"
Repository = "https://github.com/snap-stanford/biomni"

[tool.setuptools.dynamic]
version = {attr = "biomni.version.__version__"}

[tool.setuptools.packages.find]
exclude = ["test*"]

[tool.setuptools.package-data]
"*" = ["*"]
